Updated proposal revision by eliminating the task-centric UI scenario and focusing on the problem and societal benefits of segmenting gestures. Now comparing our approach with closely related work.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,13 @@
 *.jar
 *.war
 *.ear
+
+.DS_Store
+
+Proposal_Revision/.project~
+Proposal_Revision/tmp
+
+
+.gitignore~
+
+Proposal_Revision/documen.synctex.gz
